tests/core/snapshots/test-flatten-single-field.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream(baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

type Query @addField(name: "user", path: ["user", "name"]) {
  user: User @http(path: "/users/1") @omit
}

type User {
  name: String
}
