tests/core/snapshots/test-graphql-with-add-field.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Cannot add field",
    "trace": [
      "Query",
      "@addField"
    ],
    "description": "Path: [post, user, name] contains resolver graphQL at [Post.user]"
  }
]
