tests/core/snapshots/test-graphqlsource-no-base-url.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of missing field `url`",
    "trace": [
      "Post",
      "user",
      "@graphQL"
    ],
    "description": null
  }
]
