tests/core/snapshots/test-graphqlsource.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Post {
  id: Int!
  user: User
  userId: Int!
}

type Query {
  post(id: Int!): Post
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
