tests/core/snapshots/test-groupby-without-batching.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  user(id: Int!): User
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
