tests/core/snapshots/test-groupby-without-batching.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Batching capability was used without enabling it in upstream",
    "trace": [
      "Query",
      "user",
      "@http"
    ],
    "description": null
  }
]
