tests/core/snapshots/test-grpc-group-by.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "field id not found",
    "trace": [
      "tests/execution/test-grpc-group-by.md 10#5"
    ],
    "description": null
  }
]
