tests/core/snapshots/test-grpc-invalid-method-format.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Invalid method format: abc.NewsService. Expected format is <package>.<service>.<method>",
    "trace": [
      "tests/execution/test-grpc-invalid-method-format.md 6#18"
    ],
    "description": null
  }
]
