tests/core/snapshots/test-grpc-invalid-proto-id.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Protobuf files were not specified in the config",
    "trace": [
      "tests/execution/test-grpc-invalid-proto-id.md 6#18"
    ],
    "description": null
  }
]
