tests/core/snapshots/test-grpc-missing-fields.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "missing key: id",
    "trace": [
      "tests/execution/test-grpc-missing-fields.md 6#19",
      "NewsData",
      "news"
    ],
    "description": null
  }
]
