tests/core/snapshots/test-grpc-nested-data.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "expected {body: Option<String>, id: Option<Number>, postImage: Option<String>, title: Option<String>} but found [{body: Option<String>, id: Option<Number>, postImage: Option<String>, title: Option<String>}]",
    "trace": [
      "Query",
      "newsById",
      "@grpc",
      "News"
    ],
    "description": null
  }
]
